actualizacion de galeria

--- a/index.html
+++ b/index.html
@@ -1,18 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <div class="logo"></div>
-         <img src="ruta/de/la/imagen.jpg" alt="Logotipo">
-    <div class="menu"></div>
-    <div class="login"></div>
+    <link rel="stylesheet" href="estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/82d061d053.js" crossorigin="anonymous"></script>
+    <title>Document</title>   
 </head>
 <body>
-   
-
+    <header>
+        <nav class="menu-movil">
+            <div>  
+                <a href="" class="logo">
+                    <img src="img/logo-retro-game.png" alt="">
+                </a>
+            </div>
+            <input type="checkbox" id="check">
+            <laber for="check" class="bar-btn">
+                <i class="fas fa-bars"></i>
+            </laber>
+            <ul class="nav-menu">
+                <li><a href="">Start</a></li>
+                <li><a href="">Team</a></li>
+                <li><a href="">Servicios</a></li>
+                <li><a href="">Productos</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>               
+        </nav>                   
+    </header>
+    <main>
+        <div class="jumbotron">
+            <div class="container-left">
+                <h1>Juega tu historia</h1>  
+                <h1> y encuentra tu aventura</h1>
+                <h2>Registrate y obten grandes beneficios en la store y lanzamientos </h2>
+              <form action="" method="post">
+                <input type="email" name="email" placeholder="Introduce tu correo electrónico" required>
+                <button type="submit">Suscribirse</button>
+                <h3>Un miembro de nuestro team te contactará en menos de lo que canta un gallo. Aceptamos cualquier forma de pago. </h3>
+                <h3 class="terminos y condiciones">
+                    <a href="" class="nav-link">Conoce nuestros Términos y Condiciones</a>
+                </h3>
+            </form>
+            </div> 
+        </div>
+        <div class="Titulo-consolas">
+            <h2>Nueva Generación</h2>
+            <h3>Los mejores videojuegos para las consolas más potentes</h3>
+        </div>
+    <div class="Consolas">
+        <div class="cards-consolas">
+                <div class="card-pcgamer">
+                  <a href="">
+                    <img src="img/61051379-pc-gamer-falkor-plus-ryzen-7-5800x.png" alt="PC Gamer">
+                  </a>
+                  <h3>PC Gamer</h3>
+                  <h2>Desde $500 USD</h2>
+                  <button class="btn-comprar">Comprar</button>
+                </div>
+                <div class="card-xbox">
+                  <a href="">
+                    <img src="img/_0026_xbox-series-x_s.png" alt="Xbox Series X/S">
+                  </a>
+                  <h3>Xbox Series X/S</h3>
+                  <h2>Desde $485 USD</h2>
+                  <button class="btn-comprar">Comprar</button>
+                </div>
+                <div class="card-ps5">
+                  <a href="">
+                    <img src="img/16048445630691.png" alt="Play Station 5">
+                  </a>
+                  <h3>Play Station 5</h3>
+                  <h2>Desde $650 USD</h2>
+                  <button class="btn-comprar">Comprar</button>
+                </div>
+                <div class="card-ns">
+                  <a href="">
+                    <img src="img/pic-platforms6.png" alt="Nintendo Switch">
+                  </a>
+                  <h3>Nintendo Switch</h3>
+                  <h2>Desde $250 USD</h2>
+                  <button class="btn-comprar">Comprar</button>
+                </div>
+        </div>      
+    </div>    
+        <div class="Contacto">
+            <div class="players">
+                <img src="img/chicos jugando.jpg">
+            </div>
+            <div class="dont-play-alone">
+                <div class="no-juegues-solo-h2"><h2>No jueges solo</h2></div>
+                <div class="comunidad-h1"><h1>Únete a la comunidad de gamers más grande del mundo y juega en equipo</h1></div>
+                <div class="contact-description">
+                    <p>
+                        Por qué la distancia no es un impedimento para divertirse, conocer nuevos amigos y tener las más grandes aventuras. En Retro Game sabemos lo importante que es para ti vivir grandes experiencias, llenas de retos y desafios.
+                    </p>
+                </div>
+                <div class="registro-comunidad"><button>Únete</button></div> 
+            </div>
+        </div>
+               
+    </main>
+<footer>
+        <div class="section-footer-left"> 
+            <ul class="social-icons">
+                <li>
+                    <a href="https://www.facebook.com/">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitch.tv/">
+                        <i class="fa-brands fa-twitch"></i>
+                    </a>    
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>   
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/">
+                    <i class="fa-brands fa-youtube"></i>
+                    </a>   
+                </li>
+                <li>
+                    <a href="https://www.tiktok.com/">
+                    <i class="fa-brands fa-tiktok"></i>
+                    </a> 
+                </li>
+            </ul>
+        </div>
+        <div class="section-footer-center"> 
+                <h3>Quick links</h3>
+            <ul>
+                 <li>
+                     <a href="">Marcas</a>
+                </li>
+                <li>
+                    <a href="">Desarrolladoras</a>
+                </li>
+                <li>
+                     <a href="">Oportunidades</a>
+                </li>
+                <li>
+                    <a href="">FAQs</a>
+                </li>
+            </ul>
+        </div> 
     
+    <div class="section-footer-right">
+      <h3>Legales</h3>
+    <ul>
+        <li>
+            <a href="">Privacidad</a>
+        </li>
+        <li>
+            <a href="">Condiciones</a>
+        </li>
+        <li>
+            <a href="">Preferencias</a>
+        </li>
+    </ul>
+    </div>
+  <div class="copy">
+    <h5>
+        &copy 2023 Retro Game. Todos los derechos reservados. Esta es una página de aterrizaje ficticia para fines académicos
+    </h5>
+  </div>  
+</footer>
 </body>
 </html>
