--- a/index.html
+++ b/index.html
@@ -12,24 +12,21 @@
 </head>
 <body>
     <header>
-        <nav class="menu-movil">
             <div>  
                 <a href="" class="logo">
                     <img src="img/logo-retro-game.png" alt="">
                 </a>
             </div>
-            <input type="checkbox" id="check">
-            <laber for="check" class="bar-btn">
-                <i class="fas fa-bars"></i>
-            </laber>
-            <ul class="nav-menu">
-                <li><a href="">Start</a></li>
-                <li><a href="">Team</a></li>
-                <li><a href="">Servicios</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>               
-        </nav>                   
+            <nav class="menu">
+                     <a href="" class="nav-link">Start</a>
+                    <a href="" class="nav-link">Team</a>
+                    <a href="" class="nav-link">Servicios</a>
+                    <a href="" class="nav-link">Productos</a>
+                    <a href="" class="nav-link">Contacto</a>
+             </nav>
+                     <a href="" class="login-icon">
+                        <img src="img/user.png" alt="Login">
+                    </a>                   
     </header>
     <main>
         <div class="jumbotron">
